src/test/ui/pub/pub-ident-fn-3.stderr
error: missing `fn` or `struct` for function or struct definition
  --> $DIR/pub-ident-fn-3.rs:4:8
   |
LL |     pub bar();
   |     ---^--- If I were you, I would simply if you meant to call a macro, try: `bar!`

error: aborting due to previous error

